actualizado en idex h1 por h2

--- a/VISUAL/Views/Home/Index.cshtml
+++ b/VISUAL/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
 }
 
 <div class="text-center">
-    <h1>practica visual estudio 2022</h1>
+    <h3>practica visual estudio 2022</h3>
+    <p>actualizado h1 por h3</p>
 </div>
